     Even if GeSHi worked with PHP 4.1 before, it doesn't now. (Milian Wolff)
  -  Added description of extra language features (SF#1970248, BenBE)
  -  Added support for highlighting the C# using and namespace directives (SF #1395677, BenBE)
  -  Added support for highlighting the Java import and package directives (SF #1395677, BenBE)
  -  First of series of color scheme changes. Affected languages (sofar):
     * Assembler (x86)
     * Bash
     * C
     * C#
     * Delphi
     * Fortran77
     * glSlang
     * Java & Java 5
     * JavaScript
     * OCaml
     * OpenOffice.org Basic
     * Pascal
     * Perl
     * PHP and PHP-Brief
Version 1.0.7.21
  -  Added language files
     * Basic4GL (Matthew Webb)
  -  Fixed problem with mIRC language highlighting spaces only (BenBE)
  -  Language files can now specify a function to be called to decide the
     colour of a regular expression match
  -  Added single quote to Lua (Darrin Roenfanz)
  -  Compare comments case insensitively (fixes AutoIT comments somewhat)
     (Daniel Gordon)
  -  Fixed symbols not being highlighted at all (SF #1767953, BenBE)
  -  Fixed brackets not correctly managed (SF #1767954, BenBE)
  -  Changed default languages for some extensions
  -  Included color and character information for symbol highlighting in some languages (BenBE)
  -  Fixed a problem with extension detection if default was used (BenBE)
  -  Fixed a highlighting problem with the LaTeX language (SF #1776182, BenBE)
  -  Added a new parameter for enable_highlighting to reduce source duplication (SF #1786104, BenBE)
  -  Updated doxygen documentation to include since tags and some missing parameters
  -  Disabled symbol highlighting by default (doesn't affect brackets, cf. documentation) (BenBE)
  -  Added a check for set_case_keywords for the given param to be supported (BenBE)
  -  Minor rework of the HTML documentation layout \ W3C compliance (BenBE)